# autonomous-trust

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTORS  Dockerfile  README.md  ReadMe.md  actuate.sh  emulate.sh  environment.yaml  environment.yml  present.sh  pyproject.toml  setup.py  simulate.sh  tox.ini
rust/: Cargo.toml
src/autonomous-trust/: .bashrc  Dockerfile  Dockerfile-devel  Dockerfile-test  Dockerfile.test  MANIFEST.in  README.md  entrypoint.sh  meta.yaml  pyproject.toml  pyproject.toml.rust-ext  requirements.txt  tests_requires.txt  tox.ini
src/autonomous-trust-inspector/: Dockerfile  Dockerfile-devel  Dockerfile-test  Dockerfile.test  README.md  meta.yaml  pyproject.toml  requirements.txt  tox.ini
src/autonomous-trust-inspector/autonomous_trust/: core
src/autonomous-trust-inspector/autonomous_trust/inspector/: __main__.py  inspector.py
src/autonomous-trust-inspector/autonomous_trust/inspector/dash_components/: __init__.py  __main__.py  async_update  core.py  data_feed.py  dynamic_map.py  peer_status.py  timer.py  video_feed.py
src/autonomous-trust-inspector/autonomous_trust/inspector/peer/: daq.py
src/autonomous-trust-inspector/autonomous_trust/inspector/viz/: __main__.py  index.html  live_graph.py  middleware.py  network_graph.py  server.py  social_graphs.py
src/autonomous-trust-inspector/reactjs/: build.sh  package.json  webpack.config.js
src/autonomous-trust-inspector/reactjs/async_update/: AsyncUpdate.py  Trigger.py  __init__.py  _imports_.py  async_update.dev.js  async_update.min.js  bin_data.proto  metadata.json  package-info.json
src/autonomous-trust-inspector/reactjs/src/lib/: bindata.js  (+3 more)
src/autonomous-trust-inspector/tests/: __init__.py
src/autonomous-trust-inspector/tests/a_unit/: test_viz.py
src/autonomous-trust-services/: Dockerfile-test  meta.yaml  pyproject.toml  requirements.txt  tox.ini
src/autonomous-trust-services/autonomous_trust/services/: network_statistics.py
src/autonomous-trust-simulator/: Dockerfile  Dockerfile-devel  Dockerfile-test  meta.yaml  notes.txt  pyproject.toml  requirements.txt  tox.ini
src/autonomous-trust-simulator/autonomous_trust/simulator/: __init__.py  __main__.py  config.py  dash_app.py  data_client.py  data_server.py  mock.py  net_util.py  scenario.txt  serial.py  serialize.py  sim_client.py  sim_data.py  sim_net.py  simulator.py  util.py
src/autonomous-trust-simulator/tests/: test_paths.py  test_peer_position.py  test_serialization.py  test_video.py
src/autonomous-trust/autonomous_trust/: __main__.py
src/autonomous-trust/autonomous_trust/core/: __init__.py  __main__.py  automate.py  capabilities.py  processes.py  protobuf  protocol.py  queue_pool.py  system.py  util.py
src/autonomous-trust/autonomous_trust/simple/: __main__.py  contained_list.py  data_category.py  data_client.py  data_eval.py  data_service.py  majority.py  token_list.py
src/autonomous-trust/conda/: init_conda
src/autonomous-trust/conda/env/: create_conda_env  dev_env.yml
src/autonomous-trust/conda/extra/: populate_conda_env
src/autonomous-trust/rust/: Cargo.toml
src/autonomous-trust/rust/src/: lib.rs
src/autonomous-trust/tests/: __init__.py  __main__.py  autonomoustrustcontainer.py  conftest.py
src/autonomous-trust/tests.local/: autonomoustrustcontainer.py  test_system.py
src/autonomous-trust/tests/a_unit/: test_automate.py  test_config_configuration.py  test_config_generate.py  test_identity.py  test_identity_history.py  test_network_ping.py  test_network_tcp.py  test_network_udp.py  test_structures_merkle.py  test_structures_redblack.py
src/autonomous-trust/tests/b_integration/: test_integration.py
src/autonomous-trust/tests/c_sysytem/: test_ping.py  test_system.py
src/autonomous-trust/tests/local/: autonomoustrustcontainer.py  test_system.py
src/c/: CMakeLists.txt  autonomous_trust.c  autonomous_trust.h  error_numbers.sh  example.c  preprocess.py  processes.c  processes.h  section_link.lds
src/c/algorithms/: algorithms.h
src/c/autonomous_trust/: autonomous_trust.c  autonomous_trust.h  version.h.in
src/c/autonomous_trust/algorithms/: algorithms.h
src/c/autonomous_trust/config/: config_table.h.in  config_table_priv.h.in  configuration.c  configuration.h  configuration_priv.h  processes.c  processes.h  protobuf_shutdown.cpp  protobuf_shutdown.h  serialization.c  serialization.h  sighandler.c  sighandler.h
src/c/autonomous_trust/identity/: encryptor.c  encryptor.i  group.c  group.h  hexlify.c  hexlify.i  id_proc.c  id_proc_priv.h  identity.c  identity.h  identity_priv.h  peers.c  peers.h  signature.c  signature.i
src/c/autonomous_trust/negotiation/: task.c  task.h  task_priv.h
src/c/autonomous_trust/network/: net_proc.c  net_proc_priv.h  network.c  network.h
src/c/autonomous_trust/processes/: capabilities.c  capabilities.h  capabilities_priv.h  capability_table_priv.h.in  daemonize.c  process_table.h.in  process_table_priv.h.in  process_tracker.c  process_tracker.h  process_tracker_priv.h  processes.c  processes.h
src/c/autonomous_trust/structures/: array.c  array.h  array_priv.h  data.c  data.h  data_priv.h  datetime.c  datetime.h  datetime_priv.h  map.c  map.h  map_priv.h  merkle.c  merkle.h  misc.c  redblack.c  redblack.h  redblack_priv.h  structures.h
src/c/autonomous_trust/utilities/: allocation.c  allocation.h  b64.c  b64.h  compiler.h  err_str.c  error_table_priv.h.in  exception.c  exception.h  logger.c  logger.h  message.c  message.h  msg_types.c  msg_types.h  msg_types_priv.h  protobuf_shutdown.cpp  protobuf_shutdown.h  sighandler.c  sighandler.h  util.c  util.h
src/c/config/: configuration.c  configuration.h  serialization.c  serialization.h
src/c/identity/: encryptor.i  hexlify.i  identity.c  identity.h  signature.i
src/c/structures/: array.c  array.h  datetime.c  hashtable.c  hashtable.h  map.c  map.h  merkle.c  merkle.h  minmax.c  misc.c  redblack.c  redblack.h  structures.h
src/c/test/: array_test.c  exception_test.c  logging_test.c  map_test.c  messaging_test.c  proc_track_test.c  rb_test.c  test_setup.h
src/c/utilities/: logger.c  logger.h  util.c
(+534 files in other folders)
