[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"


[project]
name = "autonomous_trust"
version = "0.1.0"
description = "AutonomousTrust - a high-trust cooperative computing framework"
authors = [
    {name = "Sean M Brennan", email = "sean.brennan@tekfive.com"}
]
readme = "ReadMe.md"
requires-python = "==3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "ruamel.yaml >= 0.15.80",
    "pynacl",
    "aenum >= 3.1.11",
    "pebble",
    "networkx >= 3.0",
    "quart >= 0.18.3",
    "libsass >= 0.22.0",
    "composable_paxos",
]


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-aiohttp",
]


[tool.maturin]
python-source = "."
python-packages = ["autonomous_trust"]
manifest-path = "rust/Cargo.toml"
features = ["pyo3/extension-module"]
compatibility = "manylinux2014"
