[package]
name = "plonkpy"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "plonkpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git" }
