[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autonomous_trust_inspector"
version = "0.1.1"
description = "AutonomousTrust Inspector - the AutonomousTrust network visualization tool"
authors = ["Sean M Brennan <sean.brennan@tekfive.com>"]
#readme = "README.md"
packages = [{include = "autonomous_trust/inspector"}]
license = "Proprietary"

[project]
name = "autonomous_trust_inspector"
version = "0.1.1"

[tool.poetry.dependencies]
python = "^3.10"
aenum = ">=3.1.11"
libsass = ">=0.22.0"
networkx = ">=3.0"
quart = ">=0.18.3"
