[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autonomous_trust_services"
version = "0.1.1"
description = "AutonomousTrust Services - a collection of AutonomousTrust capabilities"
authors = ["Sean M Brennan <sean.brennan@tekfive.com>"]
readme = "README.md"
packages = [{include = "autonomous_trust"}]
license = "Proprietary"
exclude = ["**/__pycache__"]

[project]
name = "autonomous_trust_services"
version = "0.1.1"

[tool.poetry.dependencies]
python = "^3.10"
#autonomous_trust.core = {path = "../autonomous-trust"}
autonomous-trust = ">=0.1.1"
psutil = ">=5.9.5"
geopy = '>=2.4.0'
utm = '>=0.7.0'
numpy = ">=1.25.2"
opencv-python = ">=4.8.0"
imutils = ">=0.5.4"
msgpack-numpy = ">=0.4.7"
mediapipe = ">=0.10.5"
