[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autonomous_trust_simulator"
version = "0.1.1"
description = "AutonomousTrust Simulator - an AutonomousTrust simulation tool"
authors = ["Sean M Brennan <sean.brennan@tekfive.com>"]
#readme = "README.md"
packages = [{include = "autonomous_trust/simulator"}]
license = "Proprietary"
include = ['autonomous_trust/simulator/data/*']

[project]
name = "autonomous_trust_simulator"
version = "0.1.1"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.25.2"
opencv-python = ">=4.8.0"
imutils = ">=0.5.4"
msgpack-numpy = ">=0.4.7"
