[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autonomous_trust_simulator"
version = "0.1.1"
description = "AutonomousTrust Simulator - an AutonomousTrust simulation tool"
authors = ["Sean M Brennan <sean.brennan@tekfive.com>"]
readme = "README.md"
packages = [{include = "autonomous_trust"}]
license = "Proprietary"
exclude = ["**/__pycache__"]

[project]
name = "autonomous_trust_simulator"
version = "0.1.1"

[tool.poetry.dependencies]
python = "^3.10"
autonomous-trust = ">=0.1.1"
autonomous-trust-services = ">=0.1.1"
autonomous-trust-inspector = ">=0.1.1"
numpy = ">=1.25.2"
opencv-python = ">=4.8.0"
imutils = ">=0.5.4"
flask = '>=2.2.2'
dash = '^2.6.2'
dash-bootstrap-components = '>=1.5.0'
