[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autonomous_trust"
version = "0.1.1"
description = "AutonomousTrust - a high-trust cooperative computing framework"
authors = ["Sean M Brennan <sean.brennan@tekfive.com>"]
readme = "README.md"
packages = [{include = "autonomous_trust"}]
license = "Proprietary"
exclude = ["**/etc", "**/var", "**/notes", "**/__pycache__"]

[project]
name = "autonomous_trust"
version = "0.1.1"

[tool.poetry.dependencies]
python = "^3.10"
icontract = "^2.6.2"
psutil = "^5.9.5"
PyNaCl = "^1.5.0"
python-dateutil = "^2.8.2"
"ruamel.yaml" = ">= 0.15.80"
